--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -21,6 +21,7 @@ import { createServer } from '@graphql-yoga/node'
 
 // Create your server
 const server = createServer({})
+// start the server and explore http://localhost:4000/graphql
 server.start()
 ```
 
@@ -56,6 +57,7 @@ const server = createServer({
     },
   },
 })
+// start the server and explore http://localhost:4000/graphql
 server.start()
 ```
 
@@ -73,6 +75,6 @@ import { createServer } from '@graphql-yoga/node'
 const server = createServer({
   schema,
 })
-
+// start the server and explore http://localhost:4000/graphql
 server.start()
 ```
