Basic Yoga tutorial

--- a/website/tutorial/basic/00-introduction.mdx
+++ b/website/tutorial/basic/00-introduction.mdx
@@ -15,7 +15,7 @@ You are going to use the following technologies:
 
 - [Node.js](https://nodejs.org/) - as an engine and runtime for our server.
 - [TypeScript](https://www.typescriptlang.org/) - a strongly typed programming language which builds on JavaScript giving you better tooling at any scale.
-- `graphql-yoga`- the easiest way of build an HTTP GraphQL server.
+- `graphql-yoga`- the easiest way to build an HTTP GraphQL server.
 - [`graphql-js`](https://github.com/graphql/graphql-js) - we will use the core `graphql` library as execution engine for our server.
 - [GraphiQL](https://github.com/graphql/graphiql): A graphical interface that allows you to interactively
   explore the functionality of a GraphQL API by sending query, mutation and subscription operations. It's somewhat similar to
@@ -25,7 +25,7 @@ You are going to use the following technologies:
   - Provides an editor where you can write queries, mutations & subscriptions with auto-complete and syntax
     highlighting.
 - [SQLite](https://www.sqlite.org/): A lightweight and easy to use relational database management system for persisting data on the file system.
-- [Prisma](https://www.prisma.io/): The glue between your code and SQLite database. Use Prisma Client to access your database inside of
+- [Prisma](https://www.prisma.io/): The glue between your code and SQLite database. Use Prisma Client to access your database inside
   GraphQL resolvers.
 
 You can find the [code of the tutorial in this repository](https://github.com/dotansimha/graphql-yoga/tree/master/examples/hackernews).
@@ -38,7 +38,7 @@ Hackernews is a platform where people can share links to websites and people can
 
 Here is a quick rundown of what to expect of this tutorial.
 
-You'll start by learning the basics of how a GraphQL server works, simply by defining a [_GraphQL schema_](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e) for the server and implementing your first GraphQL resolvers for posting links and retreiving a feed of links.
+You'll start by learning the basics of how a GraphQL server works, simply by defining a [_GraphQL schema_](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e) for the server and implementing your first GraphQL resolvers for posting links and retrieving a feed of links.
 
 In the beginning, these resolvers will only work with data that's stored in-memory - so nothing will persist beyond the runtime of the server.
 
@@ -50,7 +50,7 @@ Once you have the database connected, you are going to add more features to the 
 
 You will implement comments on the links and introduce graph relations.
 
-Aftewards, you will learn all about proper error and sanitizing invalid user input.
+Afterwards, you will learn all about the proper error and sanitizing invalid user input.
 
 Finally, you'll implement pagination and filtering capabilities to the API!
 
