--- a/website/tutorial/basic/03-graphql-server.mdx
+++ b/website/tutorial/basic/03-graphql-server.mdx
@@ -55,7 +55,7 @@ $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 
 Now open your browser and navigate to `http://localhost:4000/graphql`.
 
-TODO: INSERT GRAPHIQL SCREENSHOT HERE
+// TODO: INSERT GRAPHIQL SCREENSHOT HERE
 
 <Instruction>
 
