--- a/website/docs/features/graphiql.mdx
+++ b/website/docs/features/graphiql.mdx
@@ -52,12 +52,11 @@ import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
-  graphiql: (request: Request, { req, res }) {
+  graphiql: (request: Request) => {
     if (request.headers.get('graphiql-enabled')) {
-      return true;
-    } else {
-      return false;
+      return true
     }
+    return false
   },
 })
 // Start the server and explore http://localhost:4000/graphql
