--- a/website/docs/features/graphiql.mdx
+++ b/website/docs/features/graphiql.mdx
@@ -43,26 +43,6 @@ const server = createServer({
 server.start()
 ```
 
-## Dynamic Options
-
-You can also dynamically set GraphiQL options;
-
-```ts
-import { createServer } from '@graphql-yoga/node'
-
-// Provide your schema
-const server = createServer({
-  graphiql: (request: Request) => {
-    if (request.headers.get('graphiql-enabled')) {
-      return true
-    }
-    return false
-  },
-})
-// Start the server and explore http://localhost:4000/graphql
-server.start()
-```
-
 > Be aware that this does not really make your GraphQL server more secure. As long as the introspection and/or the "did you mean x" suggestion feature of GraphQL are enabled.
 
 ```ts
@@ -80,10 +60,71 @@ server.start()
 
 Disabling the "did you mean x" suggestion feature is not possible at the moment ([see the corresponding graphql-js GitHub issue](https://github.com/graphql/graphql-js/issues/2247)).
 
+As a workaround you can use the `maskedError` option for masking `validation` and `parse` errors.
+
+```ts
+import { createServer } from '@graphql-yoga/node'
+import { useDisableIntrospection } from '@envelop/disable-introspection'
+
+// Provide your schema
+const server = createServer({
+  graphiql: false,
+  plugins: [useDisableIntrospection()],
+  maskedErrors: {
+    handleParseErrors: true,
+    handleValidationErrors: true,
+  },
+})
+// Start the server and explore http://localhost:4000/graphql
+server.start()
+```
+
 So if your goal is to avoid unknown actors from reverse-engineering your GraphQL schema and executing arbitary operations, it is highly recommended to use persisted operations.
 Envelop has the plugin [`@envelop/persisted-operations`](https://www.npmjs.com/package/@envelop/persisted-operations) that can be used with GraphQL Yoga.
 
 A more detailed guide and example for adding persisted operations to GraphQL Yoga will follow.
+
+## Dynamic Options
+
+You can also dynamically set GraphiQL options based on the incoming request.
+This allows rendering GraphiQL conditionally e.g. based on a header presence or value.
+
+```ts
+import { createServer } from '@graphql-yoga/node'
+
+// Provide your schema
+const server = createServer({
+  graphiql: (request) => {
+    if (request.headers.get('graphiql-enabled')) {
+      return true
+    }
+    return false
+  },
+})
+// Start the server and explore http://localhost:4000/graphql
+server.start()
+```
+
+Within the function passed to `graphiql` you also have access to the `serverContext`.
+E.g. on Node.js it contains the `http.Request` and `http.Response` objects.
+
+```ts
+import { createServer } from '@graphql-yoga/node'
+
+// Provide your schema
+const server = createServer({
+  graphiql: (request, { req, res }) => {
+    // access something attached to the request object
+    // e.g. an user object added by an auth middleware.
+    if (req.user.role === 'admin') {
+      return true
+    }
+    return false
+  },
+})
+// Start the server and explore http://localhost:4000/graphql
+server.start()
+```
 
 ## Offline Usage
 
