docs: rename GiraphQL -> Pothos

--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -66,7 +66,7 @@ You can simply provide type definitions and a resolver map based on the popular 
 ## Passing an executable schema created by other tools
 
 You can also pass an existing `GraphQLSchema` instance to `createServer`.
-Use your favorite schema building library such as [GiraphQL](https://giraphql.com/), [gqtx](https://github.com/sikanhe/gqtx), [GraphQL Nexus](https://nexusjs.org/) or plain [graphql-js schema classes](https://graphql.org/graphql-js/type/#graphqlschema).
+Use your favorite schema building library such as [Pothos](https://pothos-graphql.dev/), [gqtx](https://github.com/sikanhe/gqtx), [GraphQL Nexus](https://nexusjs.org/) or plain [graphql-js schema classes](https://graphql.org/graphql-js/type/#graphqlschema).
 
 ```ts
 import { schema } from './schema'
