--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -16,7 +16,6 @@ GraphQL Yoga can be integrated easily as a route to the existing Koa application
 ```ts
 import Koa from 'koa'
 import { createServer } from '@graphql-yoga/node'
-import { Readable } from 'stream'
 
 const app = new Koa()
 
@@ -36,8 +35,7 @@ app.use(async (ctx) => {
   })
 
   // Converts ReadableStream to a NodeJS Stream
-  const nodeStream = Readable.from(response.body)
-  ctx.body = nodeStream
+  ctx.body = response.body
 })
 
 app.listen(4000, () => {
