docs(tutorial): Use correct NPM save-exact flag

--- a/website/tutorial/basic/03-graphql-server.mdx
+++ b/website/tutorial/basic/03-graphql-server.mdx
@@ -19,7 +19,7 @@ In this tutorial, we will be using `@graphql-yoga/node` for building our Node.js
 You'll need the `@graphql-yoga/node` package available in your project, so install it using the following command:
 
 ```bash
-npm install --save --exact @graphql-yoga/node
+npm install --save-exact @graphql-yoga/node
 ```
 
 </Instruction>
@@ -54,8 +54,6 @@ $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 ```
 
 Now open your browser and navigate to `http://localhost:4000/graphql`.
-
-// TODO: INSERT GRAPHIQL SCREENSHOT HERE
 
 <Instruction>
 
