--- a/website/tutorial/basic/01-project-setup.mdx
+++ b/website/tutorial/basic/01-project-setup.mdx
@@ -42,7 +42,7 @@ To add TypeScript support for your NodeJS project, do the following:
 In your project directory, install the packages required to run a TypeScript project:
 
 ```bash
-npm install --save-dev --exact typescript @types/node ts-node ts-node-dev cross-env
+npm install --save-dev --save-exact typescript @types/node ts-node ts-node-dev cross-env
 ```
 
 </Instruction>
