docs(tutorial): use correct save-exact flag for adding a database

--- a/website/tutorial/basic/06-adding-a-database.mdx
+++ b/website/tutorial/basic/06-adding-a-database.mdx
@@ -46,7 +46,7 @@ Speaking of being productive and building awesome stuff, let's jump back in and 
 First, let's install the Prisma CLI and Prisma Client by running the following command in your terminal:
 
 ```bash
-npm install --save-dev ---exact prisma @prisma/client
+npm install --save-dev --save-exact prisma @prisma/client
 ```
 
 </Instruction>
