--- a/website/docs/migration/migration-from-yoga-v1.mdx
+++ b/website/docs/migration/migration-from-yoga-v1.mdx
@@ -37,6 +37,97 @@ const server = createServer({
 server.start()
 ```
 
+## Context
+
+## Middlewares
+
+GraphQL Yoga v1 included [`graphql-middleware`](https://github.com/maticzav/graphql-middleware) for wrapping resolver functions with common logic.
+GraphQL Yoga v2 does no longer include `graphql-middleware` by default as using it can result in bad performance as it wraps all field resolvers within the schema.
+
+If you cannot migrate your `graphql-middleware` code to something like [`graphql-tool` `mapSchema`](https://github.com/ardatan/graphql-tools/blob/master/packages/utils/src/mapSchema.ts), we recommend using the [`@envelop/graphql-middleware`](https://www.npmjs.com/package/@envelop/graphql-middleware) plugin.
+
+<PackageInstall packages={['@envelop/graphql-middleware']} />
+
+**Yoga v1**
+
+```ts
+import { GraphQLServer } from 'graphql-yoga'
+import { typeDefs, resolvers } from './schema'
+
+// Middleware - Permissions
+
+const code = 'supersecret'
+const isLoggedIn = async (resolve, parent, args, ctx, info) => {
+  // Include your agent code as Authorization: <token> header.
+  const permit = ctx.request.get('Authorization') === code
+
+  if (!permit) {
+    throw new Error(`Not authorised!`)
+  }
+
+  return resolve()
+}
+
+const permissions = {
+  Query: {
+    secured: isLoggedIn,
+  },
+  Me: isLoggedIn,
+}
+
+const server = new GraphQLServer({
+  typeDefs,
+  resolvers,
+  middleware: [permissions],
+})
+server.start()
+```
+
+**Yoga v2**
+
+```ts
+import { createServer } from '@graphql-yoga/node'
+import { useGraphQLMiddleware } from '@envelop/graphql-middleware'
+import { typeDefs, resolvers } from './schema'
+
+// Middleware - Permissions
+
+const code = 'supersecret'
+const isLoggedIn = async (resolve, parent, args, ctx, info) => {
+  // Include your agent code as Authorization: <token> header.
+  const permit = ctx.request.get('Authorization') === code
+
+  if (!permit) {
+    throw new Error(`Not authorised!`)
+  }
+
+  return resolve()
+}
+
+const permissions = {
+  Query: {
+    secured: isLoggedIn,
+  },
+  Me: isLoggedIn,
+}
+
+const server = createServer({
+  schema: { typeDefs, resolvers },
+  plugins: [useGraphQLMiddleware([permissions])],
+})
+server.start()
+```
+
+For more details please refer to the
+
+### Replacing GraphQL Shield
+
+If you are using `graphql-shield` you might wanna have a look and see whether the following plugins might replace it:
+
+- **[`@envelop/generic-auth`](https://www.envelop.dev/plugins/use-generic-auth)**: authentication and simple (directive-based) authorization on field level
+- **[`@envelop/operation-field-permissions`](https://www.envelop.dev/plugins/use-operation-field-permissions)**: granular field permission access based on [schema coordinates](https://github.com/graphql/graphql-wg/blob/main/rfcs/SchemaCoordinates.md)
+- **[GraphQL AuthZ](https://www.the-guild.dev/blog/graphql-authz)**: a modern and flexible GraphQL authorization layer
+
 ## Subscriptions
 
 GraphQL Yoga v1 uses the [old and deprecated `subscriptions-transport-ws` protocol](https://github.com/apollographql/subscriptions-transport-ws).
