--- a/website/tutorial/advanced/01-authentication.mdx
+++ b/website/tutorial/advanced/01-authentication.mdx
@@ -379,7 +379,7 @@ So what happened here?
 
 <Instruction>
 
-Now, modify your `contextFactory` in `src/context.ts` function to call this function:
+Now, modify your `createContext` function in `src/context.ts` function to call this function:
 
 ```typescript
 import { PrismaClient, User } from '@prisma/client'
