--- a/website/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/tutorial/basic/07-connecting-server-and-database.mdx
@@ -38,7 +38,7 @@ export async function createContext(): Promise<GraphQLContext> {
 
 <Instruction>
 
-Now, you'll need to import the `contextFactory` function and make sure you add it as part of the GraphQL execution process:
+Now, you'll need to import the `createContext` function and make sure you add it as part of the GraphQL execution process:
 
 ```typescript
 // ... other imports ...
