small doc updates

--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -119,7 +119,7 @@ server.start()
 
 ## Disabling Multipart Request Processing
 
-If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga handling multipart requests;
+If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
 
 ```ts
 createServer({
