--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -116,3 +116,32 @@ const server = createServer({
 // Start the server and explore http://localhost:4000/graphql
 server.start()
 ```
+
+## Disabling Multipart Request Processing
+
+If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
+
+```ts
+createServer({
+  multipart: false,
+})
+```
+
+## Configuring Multipart Request Processing (only for Node.js)
+
+In Node.js, you can configure the limits of the multipart request processing such as maximum allowed file size, maximum numbers of files, etc.
+
+```ts
+createServer({
+  multipart: {
+    // Maximum allowed file size (in bytes)
+    fileSize: 1000000,
+    // Maximum allowed number of files
+    files: 10,
+    // Maximum allowed size of content (operations, variables etc...)
+    fieldSize: 1000000,
+    // Maximum allowed header size for form data
+    headerSize: 1000000,
+  },
+})
+```
